// 使用的语法版本
syntax = "proto3";

// 生成的go文件包
option go_package = ".;agent";//grpc这里生效了


enum FileDataPacketType {
    Data = 0;
    EOF = 1;
}
// 文件数据。注意：只在Type为Data的时候，Data字段才能有数据
message FileDataPacket {
    FileDataPacketType Type = 1;
    bytes Data = 2;
}

message SendIPFSFileResp {
    string FileHash = 1;
}

message GetIPFSFileReq {
    string FileHash = 1;
}

service Agent {
    rpc SendIPFSFile(stream FileDataPacket)returns(SendIPFSFileResp){}
    rpc GetIPFSFile(GetIPFSFileReq)returns(stream FileDataPacket){}
}

